replace removal marked use